@@ -1,3 +1,12 @@
+2008-09-26  Yichao Yin  <yichao.yin@torchmobile.com.cn>
+
+        Reviewed by George Staikos, Maciej Stachowiak.
+
+        Add utility functions needed for upcoming WML code.
+
+        * wtf/ASCIICType.h:
+        (WTF::isASCIIPrintable):
+
 2008-09-26  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler.
